TAG: entrezgeneload-3-1-0-8
TAG: entrezgeneload-3-1-0-7
DATE: 01/05/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-6
TAG: entrezgeneload-3-1-0-5
TAG: entrezgeneload-3-1-0-4
DATE: 01/04/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-3
DATE: 01/03/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-2
TAG: entrezgeneload-3-1-0-1
DATE: 12/30/2004
STAFF: lec
RELEASE: A
CHANGES: TR 5939

TAG: entrezgeneload-tr6433-BP
DATE: 12/22/2004
STAFF: lec
RELEASE: A
CHANGES: Branch point tag for TR6433

TAG: entrezgeneload-1-0-1
TAG: entrezgeneload-1-0-0
DATE: 12/06/2004
STAFF: lec
RELEASE: A
CHANGES: converted from locuslinkload
