@@ -46,6 +46,11 @@ EntrezGene Load: Data and QC Reports
 <LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload2.sql.rpt">Bucket 2: New EntrezGene IDs Processed</A>
 <LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload3.sql.rpt">Bucket 3: MGI Rat Symbols with an invalid EntrezGene ID</A>
 <LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload4.sql.rpt">Bucket 4: Duplicate Rat Symbols in MGI</A>
+<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload5.sql.rpt">Bucket 5: MGI Rat Symbols with neither a EG ID nor RGD ID (the No-No set)</A>
+<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload6.sql.rpt">Bucket 6: MGI Rat Symbols without a EG ID, but with a RGD ID (the No-Yes set)</A>
+<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload7.sql.rpt">Bucket 7: MGI Rat Symbols with no EG ID, no RGD ID, no RatMap ID (the No-No-No set)</A>
+<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload8.sql.rpt">Bucket 8: MGI Rat Symbols with no EG ID, no RGD ID, but with a RatMap ID (the No-No-Yes set)</A>
+<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/rat/preload9.sql.rpt">Bucket 9: MGI Rat Symbols with a EG ID, no RGD ID, no RatMap ID (the Yes-No-No set)</A>
 </UL>
 
 <H4>Documentation</H4>
