@@ -22,9 +22,9 @@ date >> ${LOG}
 ../deleteIDs.csh ${RATDATADIR} ${RATSPECIESKEY} "${LOGICALREFSEQKEY}" "${LOGICALRGDKEY},${LOGICALRATMAPKEY}"
 ../createSets.csh ${RATDATADIR} ${RATTAXID} ${RATSPECIESKEY}
 ./createBuckets.csh
-../runreports.csh ${RATDATADIR}
 ../acc.csh ${RATDATADIR} ${RATTAXID}
 ../updateNomen.csh ${RATDATADIR} ${RATTAXID} ${RATSPECIESKEY}
 ../updateMapping.csh ${RATDATADIR} ${RATTAXID}
+../runreports.csh ${RATDATADIR}
 
 date >> ${LOG}
